--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@ integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pG
   color : rgb(10,180,50);
 }
 
+@media screen and (max-width : 768px ) {
+
+.current-player-score-1,.current-player-score-2 {
+  margin-top : -100px;
+  width : 70%;
+}
+
+.player-0,.player-1 {
+  font-size: 20px;
+}
+
+.dice1 {
+  height : 30%;
+  width : 30%;
+}
+
+#gameName {
+  font-size: 24px;
+  letter-spacing: 3px;
+}
+}
+
 
 </style>
 
@@ -52,17 +74,33 @@ integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pG
 
 	<body style="background-image : linear-gradient(90deg,rgb(255,0,0),rgb(0,0,0));"> <!-- Background color of the website  can be changed here -->
 
-<div class="container">
+
   <div>
-    <h1 style = "color : rgb(255,255,255);text-align : center;"><strong>PIG GAME</strong></h1>
+    <h1 style = "color : rgb(255,255,255);text-align : center;" id="gameName"><strong>PIG GAME</strong></h1>
   </div>
 
+   <div class="col-sm-2 hidden-lg hidden-md hidden-sm" id="operations">
+
+        <button class="btn btn-default btn-xs center-block" id="new-game1"><i class="fas fa-plus-circle"></i> NEW GAME</button>
+        <div class="row" style="margin-top: 10px;">
+          <div class="col-xs-6 ">
+        <button class="btn btn-default btn-xs center-block" id="roll-dice1" ><i class="fas fa-sync-alt"></i> ROLL DICE</button>
+      </div>
+      <div class="col-xs-6">
+        <button class="btn btn-default btn-xs center-block" id="hold1"><i class="fas fa-pause-circle"></i> HOLD</button>
+      </div>
+      </div>
+        <img src="" class="img img-responsive center-block dice1" style="margin-top : 20px;box-shadow: 0 10px 40px  rgb(0,0,0);">
+        </div>
+      </div>
+
+<div class="container">
   <div class="jumbotron" style="text-align: center;margin-top : 30px;">
     <div class="row">
 
       <!-- first player pannel -->
 
-      <div class="col-sm-5">
+      <div class="col-sm-5 col-xs-6">
         
         <div class="player-name-0 center-block" >
 
@@ -85,7 +123,7 @@ integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pG
 
     <!-- opertions -->
 
-      <div class="col-sm-2" id="operations">
+      <div class="col-sm-2 hidden-xs" id="operations">
 
         <button class="btn btn-default" id="new-game"><i class="fas fa-plus-circle"></i> NEW GAME</button>
         <img src="" class="img img-responsive center-block dice" style="margin-top : 50px;box-shadow: 0 10px 40px  rgb(0,0,0);">
@@ -100,7 +138,7 @@ integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pG
 
       <!-- second player pannel -->
 
-      <div class="col-sm-5">
+      <div class="col-sm-5 col-xs-6">
 
         <div class="player-name-1 center-block">
 
