--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pG
 
 
   <div>
-    <h1 style = "color : rgb(255,255,255);text-align : center;" id="gameName"><strong>PIG GAME</strong></h1>
+    <h1 style = "color : rgb(255,255,255);text-align : center;" id="gameName"><strong>DICE GAME</strong></h1>
   </div>
 
    <div class="col-sm-2 hidden-lg hidden-md hidden-sm" id="operations">
